--- a/toolkits/springer/packages/springer-context/scss/enhanced.scss
+++ b/toolkits/springer/packages/springer-context/scss/enhanced.scss
@@ -28,6 +28,7 @@
 @import '30-mixins/clearfix';
 @import '30-mixins/hiding';
 @import '30-mixins/keyframes';
+@import '30-mixins/links';
 @import '30-mixins/lists';
 @import '30-mixins/media-query';
 @import '30-mixins/style';
@@ -37,15 +38,15 @@
 @import '30-mixins/class-stack';
 @import '30-mixins/container';
 @import '30-mixins/headings';
-@import '30-mixins/links';
 @import '30-mixins/triangle';
 @import '30-mixins/wrap';
 @import '30-mixins/springer-hiding';
+@import '30-mixins/springer-links';
 @import '30-mixins/springer-typography';
 
 // frontend-springer-toolkit
 @import '40-base/forms';
 @import '40-base/layout';
-@import '40-base/links';
+@import '40-base/springer-links';
 @import '40-base/tables';
 @import '40-base/typography';
