Adds default colors file into colors folder and updates import path

--- a/toolkits/springer/packages/springer-context/scss/enhanced.scss
+++ b/toolkits/springer/packages/springer-context/scss/enhanced.scss
@@ -9,7 +9,8 @@
 
 // frontend-springer-toolkit
 @import '10-settings/breakpoints';
-@import '10-settings/colors';
+@import '10-settings/colors/default';
+@import '10-settings/colors/shared';
 @import '10-settings/container';
 @import '10-settings/global';
 @import '10-settings/spacing';
