--- a/toolkits/springer/packages/springer-pagination/scss/50-components/pagination.scss
+++ b/toolkits/springer/packages/springer-pagination/scss/50-components/pagination.scss
@@ -2,13 +2,18 @@
 	@include u-list-reset;
 	display: flex;
 	align-items: center;
-	font-size: $pagination-font-size;
-	padding: $pagination-padding;
+	font-size: $springer-pagination--font-size;
+	padding: $springer-pagination--padding;
 	line-height: 1;
+	border-top: 1px solid $springer-pagination--border-color;
+	border-bottom: 1px solid $springer-pagination--border-color;
+	background-color: $springer-pagination--background;
+	justify-content: center;
+	width: 100%;
 }
 
 .c-pagination__item {
-	margin-right: $pagination-item-spacing;
+	margin-right: $springer-pagination--item-spacing;
 
 	&:last-child {
 		margin-right: 0;
@@ -17,24 +22,24 @@
 
 .c-pagination__link {
 	display: block;
-	padding: $pagination-link-padding;
+	padding: $springer-pagination--link-padding;
 	text-decoration: none;
-	border-radius: $pagination-border-radius;
-	color: $pagination-link-color;
+	border-radius: $springer-pagination--border-radius;
+	color: $springer-pagination--link-color;
 
 	&:focus,
 	&:visited,
 	&:hover {
-		color: $pagination-link-color;
+		color: $springer-pagination--link-color;
 	}
 
 	&:hover {
-		background-color: $pagination-link-background-color-hover;
+		background-color: $springer-pagination--link-background-color-hover;
 	}
 }
 
 .c-pagination__link--disabled {
-	color: $pagination-link-color-disabled;
+	color: $springer-pagination--link-color-disabled;
 
 	&:hover {
 		background-color: transparent;
@@ -43,19 +48,19 @@
 	&:focus,
 	&:visited,
 	&:hover {
-		color: $pagination-link-color-disabled;
+		color: $springer-pagination--link-color-disabled;
 	}
 }
 
 .c-pagination__link--active {
-	background-color: $pagination-link-background-color-active;
-	color: $pagination-link-color-active;
+	background-color: $springer-pagination--link-background-color-active;
+	color: $springer-pagination--link-color-active;
 
 	&:focus,
 	&:visited,
 	&:hover {
-		background-color: $pagination-link-background-color-active;
-		color: $pagination-link-color-active;
+		background-color: $springer-pagination--link-background-color-active;
+		color: $springer-pagination--link-color-active;
 	}
 }
 
@@ -65,11 +70,11 @@
 }
 
 .c-pagination__icon {
-	fill: $pagination-icon-color;
-	width: $pagination-icon-width;
-	height: $pagination-icon-height;
+	fill: $springer-pagination--icon-color;
+	width: $springer-pagination--icon-width;
+	height: $springer-pagination--icon-height;
 }
 
 .c-pagination__icon--active {
-	fill: $pagination-icon-clickable-color;
+	fill: $springer-pagination--icon-clickable-color;
 }
