--- a/toolkits/springer/packages/springer-context/scss/enhanced.scss
+++ b/toolkits/springer/packages/springer-context/scss/enhanced.scss
@@ -41,13 +41,13 @@
 @import '30-mixins/headings';
 @import '30-mixins/triangle';
 @import '30-mixins/wrap';
-@import '30-mixins/springer-hiding';
-@import '30-mixins/springer-links';
-@import '30-mixins/springer-typography';
+@import '30-mixins/hiding';
+@import '30-mixins/links';
+@import '30-mixins/typography';
 
 // frontend-springer-toolkit
 @import '40-base/forms';
 @import '40-base/layout';
-@import '40-base/springer-links';
+@import '40-base/links';
 @import '40-base/tables';
 @import '40-base/typography';
