Use system font for sans serif on springer-listing

--- a/toolkits/springer/packages/springer-listing/scss/10-settings/listing.scss
+++ b/toolkits/springer/packages/springer-listing/scss/10-settings/listing.scss
@@ -1,4 +1,4 @@
-$springer-listing--font-family: $font-family-sans;
+$springer-listing--font-family: $font-family-system-sans;
 $springer-listing--title-font-family: $font-family-serif;
 $springer-listing--title-font-size: 2rem;
 $springer-listing--title-font-weight: normal;
