Removes dot from springer header styles that was visually separating header items

--- a/toolkits/springer/packages/springer-header/scss/50-components/springer-header.scss
+++ b/toolkits/springer/packages/springer-header/scss/50-components/springer-header.scss
@@ -31,19 +31,10 @@
 
 .c-header__item {
 	color: $springer-header--item-color;
+	margin-right: get-spacing(sm);
 
-	& + & {
-		&::before {
-			@include font-size(1em);
-			content: "\2022";
-			float: left;
-			font-family: serif;
-			line-height: inherit;
-			margin: 0 get-spacing(sm);
-			position: relative;
-			text-align: center;
-			top: 2px;
-		}
+	&:last-child {
+		margin-right: 0;
 	}
 }
 
