spacing on component
- add padding at top of component
- reverse margin spacing to be on bottom instead of top
- avoid shorthand for margin as margin-bottom on added for last-child

--- a/toolkits/springer/packages/springer-user-metadata/scss/10-settings/user-metadata.scss
+++ b/toolkits/springer/packages/springer-user-metadata/scss/10-settings/user-metadata.scss
@@ -1,3 +1,4 @@
+$springer-user-metadata--padding: get-spacing(lg);
 $springer-user-metadata--font-size: $font-size-xxs;
 $springer-user-metadata--font-colour: greyscale(40);
 $springer-user-metadata--line-height: $line-height-tight;
