Adds more margin to header items

--- a/toolkits/springer/packages/springer-header/scss/50-components/springer-header.scss
+++ b/toolkits/springer/packages/springer-header/scss/50-components/springer-header.scss
@@ -31,7 +31,7 @@
 
 .c-header__item {
 	color: $springer-header--item-color;
-	margin-right: get-spacing(sm);
+	margin-right: get-spacing(lg);
 
 	&:last-child {
 		margin-right: 0;
