--- a/toolkits/springer/packages/springer-box/scss/10-settings/box.scss
+++ b/toolkits/springer/packages/springer-box/scss/10-settings/box.scss
@@ -5,6 +5,7 @@ $box--heading-padding: 0 0 get-spacing(xs);
 $box--border-radius: 2px;
 $box--box-shadow: 0 0 5px 0 greyscale(50, 0.1);
 $box--border: 1px solid color("action-dull", 0.3);
+$box--border-keyline: 4px solid color('success');
 $box--line-height: 1.3;
 $box--margin-bottom: get-spacing(md);
 $box--padding: get-spacing(md);
