Fix spacing between successive c-article-info-details elements

--- a/toolkits/global/packages/global-article/scss/50-components/article-enhanced.scss
+++ b/toolkits/global/packages/global-article/scss/50-components/article-enhanced.scss
@@ -133,6 +133,10 @@
 	}
 }
 
+.c-article-info-details + .c-article-info-details {
+	margin-top: 0;
+}
+
 .c-article-aop {
 	font-size: map-get($article--font-sizes, 'font-size-2');
 	color: map-get($article--grey-palette, 'grey-3');
