--- a/toolkits/springer/packages/springer-ad/scss/50-components/ad.scss
+++ b/toolkits/springer/packages/springer-ad/scss/50-components/ad.scss
@@ -42,6 +42,21 @@ body > img[src*=pbgrd] {
 	height: 600px;
 }
 
+.c-ad--MPU1 {
+	background-color: $ad--mpu-background-color;
+	padding-top: $ad--mpu-padding-top;
+	padding-bottom: $ad--mpu-padding-bottom;
+}
+
+.c-ad--MPU1 .c-ad__label {
+	margin-bottom: $ad--mpu-label-margin-bottom;
+}
+
+.c-ad--MPU1 .c-ad__inner {
+	margin: 0 auto;
+	width: 300px;
+}
+
 .c-ad--MPU1 iframe {
 	width: 300px;
 	height: 250px;
