Added margin-top to MPU

--- a/toolkits/springer/packages/springer-ad/scss/50-components/ad.scss
+++ b/toolkits/springer/packages/springer-ad/scss/50-components/ad.scss
@@ -44,6 +44,7 @@ body > img[src*=pbgrd] {
 
 .c-ad--MPU1 {
 	background-color: $ad--mpu-background-color;
+	margin-top: $ad--mpu-margin-top;
 	padding-top: $ad--mpu-padding-top;
 	padding-bottom: $ad--mpu-padding-bottom;
 }
