--- a/toolkits/springer/packages/springer-ad/scss/10-settings/ad.scss
+++ b/toolkits/springer/packages/springer-ad/scss/10-settings/ad.scss
@@ -2,6 +2,7 @@ $ad--font-size: $font-size-xs;
 $ad--leaderboard-bg-color: greyscale(95);
 $ad--leaderboard-padding: get-spacing(xs);
 $ad--mpu-background-color: greyscale(95);
+$ad--mpu-margin-top: get-spacing(lg);
 $ad--mpu-padding-top: get-spacing(xs);
 $ad--mpu-padding-bottom: get-spacing(lg);
 $ad--mpu-label-margin-bottom: get-spacing(xs);
