Adds xs and xxs variants to list group to keep in-line with spacing map

--- a/toolkits/springer/packages/springer-lists/scss/10-settings/list-group.scss
+++ b/toolkits/springer/packages/springer-lists/scss/10-settings/list-group.scss
@@ -1,4 +1,6 @@
 $list-group--border-color: greyscale(80);
+$list-group--padding-xxs: get-spacing(xxs) 0;
+$list-group--padding-xs: get-spacing(xs) 0;
 $list-group--padding-sm: get-spacing(sm) 0;
 $list-group--padding-md: get-spacing(md) 0;
 $list-group--padding-lg: get-spacing(lg) 0;
