Adjust the font size to bring it in line with rest of pop up

--- a/toolkits/global/packages/global-article/scss/50-components/article-enhanced.scss
+++ b/toolkits/global/packages/global-article/scss/50-components/article-enhanced.scss
@@ -58,6 +58,7 @@
 	&__author-list {
 		list-style: none;
 		font-family: $font-family-serif;
+		font-size: map-get($article--font-sizes, 'font-size-3');
 		padding: 0;
 		margin-top: 0;
 		clear: both;
