Removes psuedo els from banner, update readme

--- a/toolkits/global/packages/global-banner/scss/10-settings/_banner.scss
+++ b/toolkits/global/packages/global-banner/scss/10-settings/_banner.scss
@@ -6,15 +6,23 @@
  */
 
 $banner--padding-y: 12px;
-$banner--padding-y-compact: 4px;
+$banner--padding-x: 12px;
 $banner--font: $font-family-sans;
 $banner--font-size: 16px;
 $banner--font-size-small: 14px;
 $banner--link-color: gray;
 $banner--background-color: white;
 $banner--border: 1px solid lightgray;
-$banner--background-color-inverted: black;
-$banner--color-inverted: white;
-$banner--background-color-marketing: ghostwhite;
-$banner--border-marketing: 1px solid lightblue;
-$banner--color-marketing: black;
+
+// --compact
+$banner--compact-padding-y: 4px;
+$banner--compact-padding-x: 4px;
+
+// --contrast
+$banner--contrast-background-color: black;
+$banner--contrast-color: white;
+
+// --marketing
+$banner--marketing-background-color: ghostwhite;
+$banner--marketing-border: 1px solid lightblue;
+$banner--marketing-color: black;
