Rename inverted class

--- a/toolkits/global/packages/global-banner/scss/50-components/_banner.scss
+++ b/toolkits/global/packages/global-banner/scss/50-components/_banner.scss
@@ -43,7 +43,7 @@
 	}
 }
 
-.c-banner--inverted {
+.c-banner--contrast {
 	background-color: $banner--contrast-background-color;
 	color: $banner--contrast-color;
 
