Renames vars and bump dep

--- a/toolkits/nature/packages/nature-banner/scss/10-settings/_banner.scss
+++ b/toolkits/nature/packages/nature-banner/scss/10-settings/_banner.scss
@@ -4,8 +4,8 @@
  */
 
 $banner--border: 0;
-$banner--background-color-inverted: greyscale(5);
-$banner--background-color-marketing: color('blue');
-$banner--border-marketing: 0;
-$banner--color-marketing: white;
 $banner--link-color: greyscale(25);
+$banner--contrast-background-color: greyscale(5);
+$banner--marketing-background-color: color('blue');
+$banner--marketing-border: 0;
+$banner--marketing-color: white;
