Remove extra semi-colon

--- a/toolkits/springer/packages/springer-banner/scss/10-settings/_banner.scss
+++ b/toolkits/springer/packages/springer-banner/scss/10-settings/_banner.scss
@@ -4,5 +4,5 @@
  */
 
 $banner--link-color: color('action-base');
-$banner--background-color: color('action-background-light');;
+$banner--background-color: color('action-background-light');
 $banner--border: 1px solid color('corporate-light');
