--- a/toolkits/nature/packages/nature-article/scss/10-settings/article-overrides.scss
+++ b/toolkits/nature/packages/nature-article/scss/10-settings/article-overrides.scss
@@ -1,38 +1,32 @@
 /**
- * Settings
- * Article component configuration
- */
-$article--box-color: color('soft-steel');
-$article--important-color: color('orange');
-$article--key-step-color: color('blue');
-$article--page-background-color: white;
-$article--section-title-background-color: greyscale(80);
-$article--subject-background-color: color('soft-steel');
-
-$article--citations-count-color-primary: color('blue');
-$article--citations-count-color-secondary: white;
-
-$article--cta-button-background-color: color('blue');
-$article--cta-button-background-hover-color: white;
-$article--cta-button-color: white;
-$article--cta-button-hover-color: color('blue');
-$article--cta-button-icon-color: str-slice(ie-hex-str(white), 4);
-$article--cta-button-icon-hover-color: str-slice(ie-hex-str(color('blue')), 4);
-$article--cta-button-border-color: color('blue');
-
-$article--link-color: color('blue');
-$article--link-icon-color: str-slice(ie-hex-str(color('blue')), 4);
-$article--link-border-color: color('steel');
-$article--link-focus-color: color('lemon');
-
-$article--cta-button-border-radius: 2px;
-$article--bibliographic-information-list-layout: (map-get($article--breakpoints, 'sml'), map-get($article--breakpoints, 'lrg'));
-
+ *	Settings
+ *	Nature specific article component configuration (overrides configuration from global-article/10-settings)
+*/
+ 
 $article--breakpoints: (
 	'sml': map-key-get($breakpoints, 'lap'),
 	'med': map-key-get($breakpoints, 'portable'),
 	'lrg': map-key-get($breakpoints, 'desk')
 );
+
+$article--link-color: color('blue');
+$article--link-icon-color: str-slice(ie-hex-str(color('blue')), 4);
+$article--link-border-color: color('steel');
+$article--link-focus-color: color('lemon');
+$article--section-title-background-color: greyscale(80);
+$article--box-color: color('soft-steel');
+$article--important-color: color('orange');
+$article--key-step-color: color('blue');
+$article--citations-count-color-primary: color('blue');
+$article--subject-background-color: color('soft-steel');
+
+$article--cta-button-background-color: color('blue');
+$article--cta-button-background-hover-color: white;
+$article--cta-button-hover-color: color('blue');
+$article--cta-button-icon-color: str-slice(ie-hex-str(white), 4);
+$article--cta-button-icon-hover-color: str-slice(ie-hex-str(color('blue')), 4);
+$article--cta-button-border-color: color('blue');
+$article--cta-button-border-radius: 2px;
 
 $article--font-sizes: (
 	'font-size-1': 1.3rem,
