added blue colour

--- a/toolkits/springer/packages/springer-context/scss/10-settings/colors/default.scss
+++ b/toolkits/springer/packages/springer-context/scss/10-settings/colors/default.scss
@@ -4,6 +4,7 @@
  */
 
 $colors: (
+	'blue': #069,
 	'accent': #ee7d11,
 	'corporate': #00285a,
 	'corporate-light': scale-color(#00285a, $lightness: 10%),
