--- a/toolkits/springer/packages/springer-context/scss/10-settings/colors/default.scss
+++ b/toolkits/springer/packages/springer-context/scss/10-settings/colors/default.scss
@@ -4,7 +4,6 @@
  */
 
 $colors: (
-	'blue': #069,
 	'accent': #ee7d11,
 	'corporate': #00285a,
 	'corporate-light': scale-color(#00285a, $lightness: 10%),
@@ -17,7 +16,8 @@ $colors: (
 	'action-dull': #97bfd8,
 	'action-background-base': #ebf6ff,
 	'action-background-light': #f7fbfe,
-	'action-focus': #fc0
+	'action-focus': #fc0,
+	'action-marketing': #069
 );
 
 /**
