--- a/toolkits/springer/packages/springer-banner/scss/10-settings/_banner-overrides.scss
+++ b/toolkits/springer/packages/springer-banner/scss/10-settings/_banner-overrides.scss
@@ -11,6 +11,6 @@ $banner--font-size-small: 1.4rem;
 $banner--link-color: color('action-base');
 $banner--background-color: color('action-background-light');
 $banner--border: 1px solid color('corporate-light');
-$banner--marketing-background-color: color('blue');
+$banner--marketing-background-color: color('action-base');
 $banner--marketing-border: 0;
 $banner--marketing-color: white;
