--- a/toolkits/springer/packages/springer-context/scss/10-settings/colors/default.scss
+++ b/toolkits/springer/packages/springer-context/scss/10-settings/colors/default.scss
@@ -11,13 +11,12 @@ $colors: (
 	'warning': #fc0,
 	'success': #71ab0b,
 	'visited': #4500a7,
-	'action-base': #004aa7,
-	'action-light': scale-color(#004aa7, $lightness: 10%),
+	'action-base': #004bb3,
+	'action-light': scale-color(#004bb3, $lightness: 10%),
 	'action-dull': #97bfd8,
 	'action-background-base': #ebf6ff,
 	'action-background-light': #f7fbfe,
-	'action-focus': #fc0,
-	'action-marketing': #069
+	'action-focus': #fc0
 );
 
 /**
