--- a/toolkits/springer/packages/springer-context/scss/10-settings/colors/default.scss
+++ b/toolkits/springer/packages/springer-context/scss/10-settings/colors/default.scss
@@ -11,8 +11,8 @@ $colors: (
 	'warning': #fc0,
 	'success': #71ab0b,
 	'visited': #4500a7,
-	'action-base': #004aa7,
-	'action-light': scale-color(#004aa7, $lightness: 10%),
+	'action-base': #004b83,
+	'action-light': scale-color(#004b83, $lightness: 10%),
 	'action-dull': #97bfd8,
 	'action-background-base': #ebf6ff,
 	'action-background-light': #f7fbfe,
