Add colours to the range

--- a/toolkits/nature/packages/nature-context/scss/10-settings/colors/default.scss
+++ b/toolkits/nature/packages/nature-context/scss/10-settings/colors/default.scss
@@ -34,7 +34,9 @@ $colors: (
 	'honeydew': #e7f6e6,
 	'nature-primary': #940720,
 	'nature-secondary': #a12a3f,
-	'nature-tertiary': #d7c8c8
+	'nature-tertiary': #d7c8c8,
+	'action-base': #004b83,
+	'action-light': scale-color(#004b83, $lightness: 10%),
 );
 
 // nature sub-brands
