Remove trailing comma

--- a/toolkits/nature/packages/nature-context/scss/10-settings/colors/default.scss
+++ b/toolkits/nature/packages/nature-context/scss/10-settings/colors/default.scss
@@ -36,7 +36,7 @@ $colors: (
 	'nature-secondary': #a12a3f,
 	'nature-tertiary': #d7c8c8,
 	'action-base': #004b83,
-	'action-light': scale-color(#004b83, $lightness: 10%),
+	'action-light': scale-color(#004b83, $lightness: 10%)
 );
 
 // nature sub-brands
