--- a/toolkits/nature/packages/nature-context/scss/core.scss
+++ b/toolkits/nature/packages/nature-context/scss/core.scss
@@ -4,7 +4,7 @@
  * both do and dont cut the mustard, keep to a minimum
  */
 
-@import '10-settings/colors';
+@import '10-settings/colors/default';
 @import '10-settings/typography';
 
 @import '20-functions/colors';
