Update dependency and override

--- a/toolkits/nature/packages/nature-banner/scss/10-settings/_banner-overrides.scss
+++ b/toolkits/nature/packages/nature-banner/scss/10-settings/_banner-overrides.scss
@@ -12,7 +12,6 @@ $banner--link-color: greyscale(25);
 $banner--compact-padding-y: spacing(4);
 $banner--compact-padding-x: spacing(4);
 $banner--contrast-background-color: greyscale(5);
-$banner--marketing-background-color: color('blue');
+$banner--marketing-background-color: color('action-base');
 $banner--marketing-border: 0;
 $banner--marketing-color: white;
-
