--- a/toolkits/springer/packages/springer-ad/scss/50-components/ad.scss
+++ b/toolkits/springer/packages/springer-ad/scss/50-components/ad.scss
@@ -5,7 +5,7 @@ body > img[src*=pbgrd] {
 
 .c-ad {
 	@include font-size($ad--font-size);
-	@include u-text-sans-serif;
+	font-family: $font-family-sans;
 	display: none;
 
 	.js & {
