--- a/toolkits/springer/packages/springer-meta/scss/10-settings/meta.scss
+++ b/toolkits/springer/packages/springer-meta/scss/10-settings/meta.scss
@@ -1,5 +1,5 @@
 $springer-meta--font-size: 1.4rem;
-$springer-meta--font-family: $font-family-system-sans;
+$springer-meta--font-family: $font-family-sans;
 $springer-meta--line-height: inherit;
 $springer-meta--padding-right: 0.5em;
 $springer-meta--margin-right: 0.5em;
