Update font family for user-metadata

--- a/toolkits/springer/packages/springer-user-metadata/scss/50-components/user-metadata.scss
+++ b/toolkits/springer/packages/springer-user-metadata/scss/50-components/user-metadata.scss
@@ -1,6 +1,6 @@
 .c-user-metadata {
-	@include u-text-sans-serif;
 	@include font-size($springer-user-metadata--font-size);
+	font-family: $font-family-sans;
 	color: $springer-user-metadata--font-colour;
 	line-height: $springer-user-metadata--line-height;
 	padding-top: $springer-user-metadata--padding-y;
