--- a/toolkits/springer/packages/springer-context/scss/enhanced.scss
+++ b/toolkits/springer/packages/springer-context/scss/enhanced.scss
@@ -7,12 +7,13 @@
 @import '10-settings/keyframes';
 @import '10-settings/colors/shared';
 @import '10-settings/style';
+@import '10-settings/typography';
 
 // frontend-springer-toolkit
 @import '10-settings/breakpoints';
 @import '10-settings/colors/default';
 @import '10-settings/container';
-@import '10-settings/typography';
+@import '10-settings/typography-springer';
 @import '10-settings/spacing';
 
 // frontend-global-toolkit
