--- a/toolkits/springer/packages/springer-context/scss/30-mixins/headings.scss
+++ b/toolkits/springer/packages/springer-context/scss/30-mixins/headings.scss
@@ -25,7 +25,7 @@
 @mixin h1 {
 	@include heading-link;
 	@include font-size($font-size-xxl);
-	@include u-webfont('serif');
+	font-family: $font-family-serif;
 	font-style: normal;
 	font-weight: 400;
 	line-height: (42 / 32);
@@ -35,7 +35,7 @@
 @mixin h2 {
 	@include heading-link;
 	@include font-size($font-size-xl);
-	@include u-webfont('serif');
+	font-family: $font-family-serif;
 	font-style: normal;
 	font-weight: 400;
 	line-height: (36 / 26);
@@ -45,7 +45,7 @@
 @mixin h3 {
 	@include heading-link;
 	@include font-size($font-size-lg);
-	@include u-webfont('serif');
+	font-family: $font-family-serif;
 	font-style: normal;
 	font-weight: 400;
 	line-height: (28 / 21);
@@ -55,7 +55,7 @@
 @mixin h4 {
 	@include heading-link;
 	@include font-size($font-size-md);
-	@include u-webfont('serif');
+	font-family: $font-family-serif;
 	font-style: normal;
 	font-weight: 700;
 	line-height: (28 / 20);
