--- a/toolkits/springer/packages/springer-context/scss/10-settings/typography-springer.scss
+++ b/toolkits/springer/packages/springer-context/scss/10-settings/typography-springer.scss
@@ -1,5 +1,7 @@
 $font-family-serif: Georgia, Palatino, serif;
 
+$context--font-size-base: 1.8em;
+
 $font-size-xxs: 12px;
 $font-size-xs: 14px;
 $font-size-sm: 16px;
