Renames utils and mixins for consistency and adds inherit and underline

--- a/toolkits/global/packages/global-context/scss/30-mixins/links.scss
+++ b/toolkits/global/packages/global-context/scss/30-mixins/links.scss
@@ -1,4 +1,27 @@
-@mixin u-faux-block-link {
+@mixin u-link-inherit() {
+	color: inherit;
+
+	&.visited,
+	&:visited {
+		color: inherit;
+	}
+
+	&.hover,
+	&:hover {
+		color: inherit;
+	}
+}
+
+@mixin u-link-underline() {
+	text-decoration: underline;
+
+	&.hover,
+	&:hover {
+		text-decoration: none;
+	}
+}
+
+@mixin u-link-faux-block() {
 	&::before {
 		content: '';
 		position: absolute;
