Nature context links and versioning

--- a/toolkits/nature/packages/nature-context/scss/enhanced.scss
+++ b/toolkits/nature/packages/nature-context/scss/enhanced.scss
@@ -23,6 +23,7 @@
 @import '30-mixins/hiding';
 @import '30-mixins/icons';
 @import '30-mixins/keyframes';
+@import '30-mixins/links';
 @import '30-mixins/lists';
 @import '30-mixins/style';
 @import '30-mixins/typography';
