Replace refs to old mixin

--- a/toolkits/springer/packages/springer-dropdown/scss/50-components/springer-dropdown.scss
+++ b/toolkits/springer/packages/springer-dropdown/scss/50-components/springer-dropdown.scss
@@ -67,7 +67,7 @@
 
 .c-dropdown__link {
 	@include interface-link;
-	@include inherited-link;
+	@include u-link-inherit;
 	display: block;
 	padding: $dropdown--link-padding;
 	background-color: $dropdown--link-background-color;
