Update font-size on h3

--- a/toolkits/global/packages/global-context/scss/10-settings/typography.scss
+++ b/toolkits/global/packages/global-context/scss/10-settings/typography.scss
@@ -13,5 +13,5 @@ $context--font-size-base: 1.8em;
 // Headings
 $context--font-size-h1: 3rem;
 $context--font-size-h2: 2.4rem;
-$context--font-size-h3: $context--font-size-base;
+$context--font-size-h3: 1.8rem;
 $context--font-size-h4: 1.4rem;
