Removes 12 from the spacing scale

--- a/toolkits/global/packages/global-context/scss/10-settings/spacing.scss
+++ b/toolkits/global/packages/global-context/scss/10-settings/spacing.scss
@@ -1,4 +1,4 @@
-$context--spacing: (0, 2, 4, 8, 12, 16, 24, 32, 48, 64);
+$context--spacing: (0, 2, 4, 8, 16, 24, 32, 48, 64);
 $context--spacing-margin-keywords: (auto);
 $context--spacing-utility-names: (
 	margin: (
