Import into enhanced and version

--- a/toolkits/springer/packages/springer-context/scss/enhanced.scss
+++ b/toolkits/springer/packages/springer-context/scss/enhanced.scss
@@ -20,10 +20,11 @@
 // frontend-global-toolkit
 @import '20-functions/colors';
 @import '20-functions/helpers';
+@import '20-functions/spacing';
 
 // frontend-springer-toolkit
 @import '20-functions/em';
-@import '20-functions/spacing';
+@import '20-functions/spacing-springer';
 @import '20-functions/strip-unit';
 
 // frontend-global-toolkit
