--- a/toolkits/nature/packages/nature-context/scss/enhanced.scss
+++ b/toolkits/nature/packages/nature-context/scss/enhanced.scss
@@ -8,6 +8,7 @@
 @import '10-settings/colors/shared';
 @import '10-settings/keyframes';
 @import '10-settings/spacing';
+@import '10-settings/spacing-nature';
 @import '10-settings/style';
 @import '10-settings/typography'; // from global-context
 @import '10-settings/typography-nature';
