Replace get-spacing with spacing in context

--- a/toolkits/springer/packages/springer-context/scss/10-settings/container.scss
+++ b/toolkits/springer/packages/springer-context/scss/10-settings/container.scss
@@ -3,4 +3,4 @@
 
 $container--width: 1220px;
 $container--padding-y: 0;
-$container--padding-x: get-spacing(xl);
+$container--padding-x: spacing(32);
