--- a/toolkits/springer/packages/springer-box/scss/10-settings/box.scss
+++ b/toolkits/springer/packages/springer-box/scss/10-settings/box.scss
@@ -1,7 +1,7 @@
 $box--background-color: white;
 $box--heading-font-size: $font-size-lg;
-$box--heading-margin: 0 0 get-spacing(md);
-$box--heading-padding: 0 0 get-spacing(xs);
+$box--heading-margin: 0 0 spacing(16);
+$box--heading-padding: 0 0 spacing(8);
 $box--border-radius: 2px;
 $box--box-shadow: 0 0 5px 0 greyscale(50, 0.1);
 $box--border: 1px solid color('action-dull', 0.3);
@@ -9,5 +9,5 @@ $box--border-error: 4px solid color('error');
 $box--border-warning: 4px solid color('warning');
 $box--border-success: 4px solid color('success');
 $box--line-height: 1.3;
-$box--margin-bottom: get-spacing(md);
-$box--padding: get-spacing(md);
+$box--margin-bottom: spacing(16);
+$box--padding: spacing(16);
