--- a/toolkits/springer/packages/springer-dropdown/scss/50-components/springer-dropdown.scss
+++ b/toolkits/springer/packages/springer-dropdown/scss/50-components/springer-dropdown.scss
@@ -12,7 +12,7 @@
 		@include triangle($direction: bottom, $size-x: 10px, $size-y: 4px, $color: $dropdown--button-caret-color);
 		display: inline-block;
 		vertical-align: middle;
-		margin-left: get-spacing(xs);
+		margin-left: spacing(8);
 	}
 }
 
@@ -39,14 +39,14 @@
 	// Create triangle border
 	&::before {
 		@include triangle($direction: top, $size-y: $dropdown--menu-arrow-height + 1, $size-x: $dropdown--menu-arrow-width + 2, $color: $dropdown--menu-border-color);
-		left: get-spacing(sm);
+		left: spacing(16);
 		transform: translateX(-1px);
 	}
 
 	// Create triangle
 	&::after {
 		@include triangle($direction: top, $size-y: $dropdown--menu-arrow-height, $size-x: $dropdown--menu-arrow-width, $color: $dropdown--menu-background-color);
-		left: get-spacing(sm);
+		left: spacing(16);
 	}
 }
 
@@ -57,7 +57,7 @@
 	&::before,
 	&::after {
 		left: auto;
-		right: get-spacing(sm);
+		right: spacing(16);
 	}
 
 	&::before {
