--- a/toolkits/springer/packages/springer-lists/scss/10-settings/list-group.scss
+++ b/toolkits/springer/packages/springer-lists/scss/10-settings/list-group.scss
@@ -1,7 +1,7 @@
 $list-group--border-color: greyscale(80);
-$list-group--padding-xxs: get-spacing(xxs) 0;
-$list-group--padding-xs: get-spacing(xs) 0;
-$list-group--padding-sm: get-spacing(sm) 0;
-$list-group--padding-md: get-spacing(md) 0;
-$list-group--padding-lg: get-spacing(lg) 0;
+$list-group--padding-xxs: spacing(4) 0;
+$list-group--padding-xs: spacing(8) 0;
+$list-group--padding-sm: spacing(16) 0;
+$list-group--padding-md: spacing(16) 0;
+$list-group--padding-lg: spacing(24) 0;
 $list-group--line-height: $line-height-tight;
