--- a/toolkits/springer/packages/springer-publisher-footer/scss/10-settings/springer-publisher-footer.scss
+++ b/toolkits/springer/packages/springer-publisher-footer/scss/10-settings/springer-publisher-footer.scss
@@ -2,13 +2,13 @@ $springer-publisher-footer--background-color: greyscale(95);
 $springer-publisher-footer--border: 1px solid greyscale(80);
 $springer-publisher-footer--columns-at-narrow: 2;
 $springer-publisher-footer--columns-at-wide: 5;
-$springer-publisher-footer--column-gap: get-spacing(lg);
-$springer-publisher-footer--column-gap-large: get-spacing(xl);
+$springer-publisher-footer--column-gap: spacing(24);
+$springer-publisher-footer--column-gap-large: spacing(32);
 $springer-publisher-footer--focus-border-size: 4px;
 $springer-publisher-footer--heading-color: greyscale(20);
 $springer-publisher-footer--heading-margin-bottom: 0.25em;
 $springer-publisher-footer--heading-weight: $font-weight-bold;
 $springer-publisher-footer--item-padding: 0.25em 0;
-$springer-publisher-footer--menu-section-padding-bottom: get-spacing(lg);
-$springer-publisher-footer--padding: get-spacing(lg);
-$springer-publisher-footer--padding-compact: get-spacing(sm);
+$springer-publisher-footer--menu-section-padding-bottom: spacing(24);
+$springer-publisher-footer--padding: spacing(24);
+$springer-publisher-footer--padding-compact: spacing(16);
