springer-user-metadata

--- a/toolkits/springer/packages/springer-user-metadata/scss/10-settings/user-metadata.scss
+++ b/toolkits/springer/packages/springer-user-metadata/scss/10-settings/user-metadata.scss
@@ -1,5 +1,5 @@
-$springer-user-metadata--padding-y: get-spacing(lg);
+$springer-user-metadata--padding-y: spacing(24);
 $springer-user-metadata--font-size: $font-size-xxs;
 $springer-user-metadata--font-colour: greyscale(40);
 $springer-user-metadata--line-height: $line-height-tight;
-$springer-user-metadata--item-margin-y: get-spacing(xxs);
+$springer-user-metadata--item-margin-y: spacing(4);
